# salvo_admin

./: .gitignore  Cargo.toml  README.md  application.yml  db.sql  test.sql  user_mapper.html
mapper/: salvo_admin.html  salvo_admin.xml
sql/: user.sql
src/: error.rs  main.rs
src/config/: mod.rs  salvo-admin.yaml
src/controller/: middleware.rs  mod.rs  request_data.rs  user.rs  user_controller.rs
src/dao/: mod.rs  request_data.rs  response_data.rs  user_mapper.rs
src/dto/: mod.rs  request.rs  request_data.rs  response.rs  response_data.rs
src/entity/: api_db.rs  casbin_rule.rs  data_scope.rs  dept.rs  dict_data.rs  dict_type.rs  job.rs  job_log.rs  login_log.rs  menu.rs  mod.rs  operate_log.rs  post.rs  response_data.rs  role.rs  role_api.rs  role_dept.rs  role_entity.rs  sys_api.rs  sys_config.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_login_log.rs  sys_menu.rs  sys_opera_log.rs  sys_post.rs  sys_role.rs  sys_user.rs  update_log.rs  user.rs  user_dept.rs  user_entity.rs  user_online.rs  user_post.rs  user_role.rs
src/helper/: mod.rs  rand_util.rs
src/logic/: mod.rs  sys_user.rs
src/mapper/: mod.rs  salvo_admin.html  salvo_admin.xml  user_mapper.html
src/service/: mod.rs  role.rs  user.rs
src/util/: mod.rs  util.rs
tests/: sqlite.db-shm  sqlite.db-wal
