[package]
name = "salvo_admin"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 生产环境的 发行构建配置 https://magiclen.org/rust-compile-optimize/  https://zhuanlan.zhihu.com/p/476524365?utm_medium=social&utm_oi=1089297405844787200
[profile.release]
opt-level = 3 # 编译优化等级 0: 不优化，1: 允许基本优化，2: 允许常用优化，3: 允许所有优化，"s": 允许常用优化，外加一些能缩小体积的优化(优化输出的二进制文件的大小)，"z": 类似"s"，但更偏重于体积的优化(可能会降低性能)(优化二进制文件大小，但也会关闭循环向量化
debug = false
rpath = false
lto = false # 程序编译后的链接阶段时所采取的优化行为,默认为false(不激活)




[dependencies]
tokio = { version = "1", features = ["macros"]}
salvo = { version = "0.26.1", features = ["cors"]}
rbatis = "3.1.15"
#rbatis = {git = "https://github.com/rbatis/rbatis.git", branch = "v4.0.0"}
rbson = "2.0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.81"
tracing-subscriber = "0.3.11"
tracing = "0.1.3"
fast_log = "1.5.16"
# 解析yaml配置文件
yaml-rust = "0.4.5"
# 初始化全局变量
once_cell = "1.13.0"
# 验证码
captcha_rust = "0.1.3"
md5 = "0.7"
# 随机数
rand = "0.8"
# 处理错误
anyhow = "1"
# http 请求库
reqwest = "0.11.11"
user-agent-parser = "0.3"
# 类似于 uuid 的库
scru128 = "2.1.3"
# 时间处理库
#speedate = "0.6.0"
# 时间处理库
chrono = { version = "0.4.1", features = ["serde"]}
# JWT 库
jsonwebtoken = "8.1.0"
