[package]
name = "salvo_admin"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 生产环境的 发行构建配置 https://magiclen.org/rust-compile-optimize/  https://zhuanlan.zhihu.com/p/476524365?utm_medium=social&utm_oi=1089297405844787200
[profile.release]
opt-level = 3 # 编译优化等级 0: 不优化，1: 允许基本优化，2: 允许常用优化，3: 允许所有优化，"s": 允许常用优化，外加一些能缩小体积的优化(优化输出的二进制文件的大小)，"z": 类似"s"，但更偏重于体积的优化(可能会降低性能)(优化二进制文件大小，但也会关闭循环向量化
debug = false # 编译后的二进制文件不输出任何debug信息 (0 或 false: 不输出任何debug信息，1: 输出debug行信息，2: 输出完整的debug信息)
rpath = false # 硬编码到二进制可执行文件或库文件中的运行时代码搜索(runtime search path)，动态链接库的加载器就通过它来搜索所需的库。
lto = false # 程序编译后的链接阶段时所采取的优化行为,默认为false(不激活)
debug-assertions = false # debug 断言，运行时的检查，该检查只能用于 debug 模式，原因是对于 release 来说，这种检查的成本较为高昂。
codegen-units = 16 # 指定一个包会被分隔为多少个代码生成单元。更多的代码生成单元会提升代码的并行编译速度，但是可能会降低运行速度，对于增量编译，默认值是 256，非增量编译是 16 。
panic = 'unwind' # unwind: 遇到 panic 后对栈进行展开(unwind)，abort: 遇到 panic 后直接停止程序
incremental = false # 关闭增量编译。开启增量编译时，rustc 会将必要的信息存放到硬盘中( target 目录中 )，当下次编译时，这些信息可以被复用以改善编译时间。
overflow-checks = false # 可以控制运行时的整数溢出行为。当开启后，整数溢出会导致 panic。

[dependencies]
tokio = { version = "1", features = ["macros"]}
salvo = { version = "0.26.1", features = ["cors"]}
rbatis = "3.1.15"
#rbatis = {git = "https://github.com/rbatis/rbatis.git", branch = "v4.0.0"}
rbson = "2.0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.81"
tracing-subscriber = "0.3.11"
tracing = "0.1.3"
fast_log = "1.5.16"
# 解析yaml配置文件
yaml-rust = "0.4.5"
# 初始化全局变量
once_cell = "1.13.0"
# 验证码
captcha_rust = "0.1.3"
md5 = "0.7"
# 随机数
rand = "0.8"
# 处理错误
anyhow = "1"
# http 请求库
reqwest = "0.11.11"
user-agent-parser = "0.3"
# 类似于 uuid 的库
scru128 = "2.1.3"
# 时间处理库
#speedate = "0.6.0"
# 时间处理库
chrono = { version = "0.4.1", features = ["serde"]}
# JWT 库
jsonwebtoken = "8.1.0"
