[package]
name = "salvo_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "0.37.9"
rbatis = "4.0.49"
rbdc-mysql = "0.1.18"
rbs = "0.1.15"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.22.0", features = ["full"]}
#uaparser = "0.6.0"
woothee = "0.13.0"
redis = { version = "0", features = ["tokio-comp"] }
fast_log = { version = "1.5", features = [] }
log = "0.4"
jsonwebtoken = "8"
captcha = "0.0.9"
lazy_static = "1.4.0"
rust-crypto = "0.2.36"
serde_json = "1.0.93"
rbdc-sqlite = "0.1.15"
